Bug 418543 - "remove -moz-pre-wrap" [p=taken.spc@gmail.com (KUROSAWA, Takeshi) r+sr=roc a1.9=beltzner]
UltraBlame original commit: d88973a24851396bb00dd51f27c51de3c242d168

--- a/layout/style/quirk.css
+++ b/layout/style/quirk.css
@@ -209,7 +209,7 @@ td > ol:-moz-only-whitespace:-moz-last-node, th > ol:-moz-only-whitespace:-moz-l
 
 
 pre[wrap], pre[cols], pre[width] {
-  white-space: -moz-pre-wrap;
+  white-space: pre-wrap;
 }
 
 
